--- a/css/style.css
+++ b/css/style.css
@@ -1,189 +1,92 @@
-body{
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-}
-
-/* Menu Responsivo*/
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-}
-.container {
-  height: 60px;
-  background-color: #FAC710;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  overflow: hidden;
-}
-
-.container .logo {
-  max-width: 250px;
-  padding: 0 10px;
-  overflow: hidden;
-}
-
-.container .logo a {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  height: 60px;
-}
-
-.container .logo a img {
-  max-width: 70%;
-  max-height: 60px;
-}
-
-.container .navbar {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  padding: 0 10px;
-}
-
-.container .navbar ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.container .navbar ul li a {
-  text-decoration: none;
-  color: black;
-  font-size: 14px;
-  text-transform: uppercase;
-  display: block;
-  height: 60px;
-  line-height: 60px;
-  cursor: pointer;
-  padding: 0 10px;
-}
-
-.container .navbar ul li a:hover {
-  color: #ffffff;
-  background-color: #C68A02;
-}
-
-.container .navbar ul .close {
-  display: none;
-  text-align: right;
-  padding: 10px;
-}
-
-.container .navbar ul .close span {
-  font-size: 40px;
-  display: inline-block;
-  border: 1px solid #C68A02;
-  padding: 0 10px;
-  cursor: pointer;
-}
-
-.container .navbar .icon-bar {
-  padding: 18px 8px;
-  width: 50px;
-  height: 60px;
-  display: none;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  cursor: pointer;
-}
-
-.container .navbar .icon-bar i {
-  background-color: #C68A02;
-  height: 2px;
-}
-
-@media only screen and (max-width: 650px) {
-  .container {
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-  }
-
-  .container .logo {
-    -webkit-box-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-  }
-
-  .container .navbar {
-    -webkit-box-flex: 0;
-    -ms-flex: 0;
-    flex: 0;
-  }
-
-  .container .navbar ul {
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    position: fixed;
-    left: 100%;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    background: #FAC710;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    -webkit-transition: left .3s;
-    -o-transition: left .3s;
-    transition: left .3s;
-  }
-
-  .container .navbar ul li a {
-    padding: 10px;
-    font-size: 16px;
-    height: auto;
-    line-height: normal;
-    color: #555555;
-  }
-
-  .container .navbar ul .close {
-    display: block;
-  }
-
-  .container .navbar .icon-bar {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-
-  .container .navbar ._Menus-show {
-    left: 0;
-  }
-}
-
-.body {
-  max-width: 700px;
-  margin: 0 auto;
-  padding: 10px;
-}
+    /* Menu Responsivo*/
+    
+    * {
+        margin: 0;
+        padding: 0;
+        outline: 0;
+        box-sizing: border-box;
+    }
+    
+    nav {
+        position: relative;
+        width: 100%;
+        margin: 0 auto;
+        background: #000000;
+        z-index: 1;
+        text-align: right;
+    }
+    
+    .logo {
+        width: 15%;
+        float: left;
+        text-align: left;
+        padding: 5px 25px;
+    }
+    
+    .menu-area li {
+        display: inline-block;
+        list-style-type: none;
+    }
+    
+    .menu-area a {
+        background-color: black;
+        -webkit-transition: background-color 0.5s ease-out;
+        -moz-transition: background-color 0.5s ease-out;
+        -o-transition: background-color 0.5s ease-out;
+        transition: background-color 0.5s ease-out;
+        color: #fff;
+        font-weight: 900;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        display: block;
+        padding: 15px 30px;
+        font-size: 75%;
+        line-height: 30px;
+        position: relative;
+        z-index: 1;
+        text-decoration: none;
+    }
+    
+    .menu-area a:hover {
+        background: #C68A02;
+        color: #fff;
+    }
+    
+    .navbar .logo img {
+        max-width: 100px;
+        max-height: 10%;
+    }
+    
+    .navbar .icon-bar {
+        width: 100%;
+        height: 50px;
+        display: none;
+        background-color: #FAC710;
+        border-bottom: 3px solid black;
+    }
+    
+    .navbar .button-menu {
+        padding: 5px 10px;
+        height: 100%;
+    }
+    
+    @media only screen and (max-width: 660px) {
+        .navbar ._Menus-show {
+            left: 0;
+            display: none;
+        }
+        nav {
+            text-align: center;
+        }
+        .menu-area li {
+            padding: 10px 0px;
+            display: unset;
+            list-style-type: unset;
+        }
+        .logo {
+            display: none;
+        }
+        .navbar .icon-bar {
+            display: block;
+        }
+    }
