--- a/Site/public/css/style.css
+++ b/Site/public/css/style.css
@@ -15,7 +15,7 @@
     /* Menu Responsivo*/
     
     .navbar {
-        border-bottom: 5px solid #C68A02;
+        border-bottom: 5px solid darkorange;
     }
     
     nav {
@@ -83,10 +83,10 @@
     .container-carousel {
         width: 100%;
         height: 500px;
-        border-right: 50px solid #FAC710;
-        border-left: 50px solid #FAC710;
-        border-top: 25px solid #fcd340;
-        border-bottom: 30px solid #fcd340;
+        border-right: 50px solid darkorange;
+        border-left: 50px solid darkorange;
+        border-top: 25px solid darkorange;
+        border-bottom: 30px solid darkorange;
     }
     
     .mySlides {
@@ -98,7 +98,7 @@
     .linha {
         width: 100%;
         height: 5px;
-        background-color: #C68A02;
+        background-color: darkorange;
     }
     /* Fim do Carroussel da imagem*/
     /* Lista de imagem */
@@ -199,10 +199,10 @@
     .container-geral-forum {
         width: 100%;
         height: 430px;
-        background-color: #C68A02;
+        background-color: darkgoldenrod;
         margin: auto;
-        border-top: 5px solid #C68A02;
-        border-bottom: 5px solid #C68A02;
+        border-top: 5px solid darkgoldenrod;
+        border-bottom: 5px solid darkgoldenrod;
     }
     
     .container-forum {
@@ -255,17 +255,13 @@
     }
     
     .botao-forum a {
-        color: white;
-    }
-    
-    .botao-forum a:hover {
-        color: black;
+        color: orangered;
     }
     
     .texto-forum .botao-forum:hover {
-        background-color: white;
-        border: 5px solid white;
-        color: #000000;
+        background-color: orange;
+        border: 5px solid orangered;
+        color: red;
     }
     /* Fim parte chat e forum*/
     /* Lista de filmes pagina*/
@@ -306,6 +302,7 @@
         border-radius: 50px;
         border: 5px solid black;
         background-color: #ff7700;
+        cursor: pointer;
         -webkit-transition: background-color 0.5s ease-out;
         transition: background-color 0.5s ease-out;
     }
@@ -551,7 +548,7 @@
         left: 0;
         bottom: 0;
         width: 100%;
-        position: fixed;
+        position: static;
         background-color: rgb(36, 37, 37);
         color: white;
         text-align: center;
