--- a/Site/public/css/style.css
+++ b/Site/public/css/style.css
@@ -100,6 +100,47 @@
             height: 5px;
             background-color: darkorange;
         }
+        
+        #usuario {
+            display: none;
+        }
+        
+        li a,
+        .dropbtn {
+            display: inline-block;
+            color: white;
+            text-align: center;
+            text-decoration: none;
+        }
+        
+        li.dropdown {
+            float: right;
+            display: inline-block;
+        }
+        
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            width: 140px;
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+        }
+        
+        .dropdown-content a {
+            color: white;
+            text-decoration: none;
+            display: block;
+            text-align: left;
+        }
+        
+        .dropdown-content a:hover {
+            background-color: #f1f1f1;
+        }
+        
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
         /* Fim do Carroussel da imagem*/
         /* Lista de imagem */
         
