--- a/Site/public/css/style.css
+++ b/Site/public/css/style.css
@@ -247,6 +247,29 @@
             display: left;
         }
         /* Fim da lista */
+        /* Grafico Notas*/
+        
+        .container-geral-grafico {
+            width: 100%;
+            height: 430px;
+            background-color: darkgoldenrod;
+            margin: auto;
+            border-top: 5px solid darkgoldenrod;
+            border-bottom: 5px solid darkgoldenrod;
+        }
+        
+        .container-grafico {
+            width: 90%;
+            height: 420px;
+            background: #fcd340;
+            margin: auto;
+            border-radius: 100px;
+        }
+        
+        #grafico {
+            margin: auto;
+        }
+        /* Fim grafico notas*/
         /* Parte forum e chat*/
         
         .container-geral-forum {
@@ -314,7 +337,7 @@
         
         .texto-forum .botao-forum:hover {
             background-color: orange;
-            border: 5px solid orangered;
+            border: 5px solid #ff4500;
             color: red;
         }
         /* Fim parte chat e forum*/
@@ -845,7 +868,10 @@
                 height: 740px;
             }
             .container-sobre {
-                height: 1650px;
+                height: 2450px;
+            }
+            .container-geral-sobre {
+                height: 2300px;
             }
         }
         
@@ -885,6 +911,12 @@
             .container-chat .chat-container {
                 width: 100%;
                 height: 655px;
+            }
+            .texto-forum p {
+                font-size: 100%;
+            }
+            .nome-git {
+                font-size: 100%;
             }
         }
         
